Mobius Forensic Toolkit 2.19
	* docs: Create directory for consolidated documentation
	* Created new resource folder data/profiles
	* libmobius_core: Added new method decoder::ini::get_value (with default value)
	* libmobius_framework: Added new class case_profile
	* libmobius_framework: Added new function list_case_profiles
	* libmobius_python: Added new class framework.case_profile
	* libmobius_python: Added new function framework.list_case_profiles

Mobius Forensic Toolkit 2.18
	* app-chromium: Added support for History schema version up to 70
	* app-chromium: Added support for Web Data schema version up to 141
	* app-chromium: Added new function get_db_schema_version(db)  
	* app-chromium: Added decoding for Bookmarks files  
	* app-chromium: Added decoding for Cookies files  
	* app-chromium: Added decoding for Extension Cookies files  
	* app-chromium: Added decoding for Safe Browsing Cookies files  
	* app-chromium: Added decoding for Local State files  
	* app-chromium: Added decoding for Login Data files  
	* app-chromium: Added decoding for Login Data For Account files  
	* app-chromium: Added decoding for Preferences files  
	* app-chromium: Implemented new class post_processor_impl class to support decryption of DPAPI, v10, and v20 encrypted data, such as cookies, login data, credit cards and autofill.
	* app-chromium: Added new tool called file_bookmarks
	* app-chromium: Added new tool called file_cookies
	* app-chromium: Added new tool called file_local_state
	* app-chromium: Added new tool called file_preferences
	* Added new post-processor extension called "post-processor-opened-files"
	* ant.evidence: Added new module post.user_accounts_from_cookies  
	* ant.evidence.vfs.accounts: Removed cookie retrieval feature
	* ant.evidence.vfs.accounts: Removed old Chromium code
	* ant.evidence.vfs.bookmarked_urls: Removed old Chromium code
	* ant.evidence.vfs.cookies: Removed old Chromium code
	* ant.turing.chromium_passwords: Removed old Chromium module