@@ -15,7 +15,6 @@
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see <http://www.gnu.org/licenses/>.
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-import datetime
 import threading
 import traceback
 
@@ -24,13 +23,14 @@ import pymobius
 import pymobius.ant.evidence
 from gi.repository import GLib
 from gi.repository import Gtk
+from gi.repository import GObject
 
 from metadata import *
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 # Constants
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-PROFILES = pymobius.ant.evidence.PROFILES
+REFRESH_INTERVAL_MS = 1000
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 # @class ProcessingView
@@ -50,8 +50,6 @@ PROFILES = pymobius.ant.evidence.PROFILES
 #
 # The class integrates with the Mobius framework's UI and handling mechanisms.
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-ITEM_STATUS, ITEM_PROFILE, ITEM_NAME, ITEM_OBJECT = range(4)
-
 class ProcessingView(object):
 
     # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
@@ -82,34 +80,39 @@ class ProcessingView(object):
         vbox.set_border_width(10)
         self.__widget.set_content(vbox)
 
-        # Status box
-        hbox = mobius.core.ui.box(mobius.core.ui.box.orientation_horizontal)
-        hbox.set_spacing(5)
-        hbox.set_visible(True)
-        vbox.add_child(hbox, mobius.core.ui.box.fill_none)
+        # Items Status tableview
+        self.__status_tableview = mediator.call('ui.new-widget', 'tableview')
+        self.__status_tableview.set_report_id('evidence.items-status')
+        self.__status_tableview.set_report_app(f'{EXTENSION_NAME} v{EXTENSION_VERSION}')
+        self.__status_tableview.set_multiple_selection(True)
+        self.__status_tableview.show()
 
-        label = mobius.core.ui.label()
-        label.set_markup('<b>Status:</b>')
-        label.set_visible(True)
-        hbox.add_child(label, mobius.core.ui.box.fill_none)
+        column = self.__status_tableview.add_column('status', 'Status')
+        column.is_sortable = True
+        
+        self.__status_tableview.add_column('uid', 'UID', column_type='int')
+        column.is_sortable = True
+        
+        self.__status_tableview.add_column('name', 'Item Name')
+        self.__status_tableview.add_column('object', column_type='object')
+        
+        self.__status_tableview.set_sort_column_id(1)
 
-        self.__status_label = mobius.core.ui.label()
-        self.__status_label.set_visible(True)
-        self.__status_label.set_halign(mobius.core.ui.label.align_left)
-        hbox.add_child(self.__status_label, mobius.core.ui.box.fill_with_widget)
+        vbox.add_child(self.__status_tableview.get_ui_widget(), mobius.core.ui.box.fill_with_widget)
 
-        # Running messages
+        # Processing status tableview
         self.__running_view = mediator.call('ui.new-widget', 'tableview')
-        self.__running_view.set_report_id('evidence.processing')
+        self.__running_view.set_report_id('evidence.processing-status')
         self.__running_view.set_report_app(f'{EXTENSION_NAME} v{EXTENSION_VERSION}')
-        # self.__running_view.set_sensitive(False)
+        self.__running_view.set_sensitive(False)
         self.__running_view.show()
-        vbox.add_child(self.__running_view.get_ui_widget(), mobius.core.ui.box.fill_with_widget)
 
         column = self.__running_view.add_column('timestamp', 'Date/Time')
         column.is_sortable = True
 
         self.__running_view.add_column('event', 'Event')
+
+        vbox.add_child(self.__running_view.get_ui_widget(), mobius.core.ui.box.fill_with_widget)
 
         # Execution box
         hbox = mobius.core.ui.box(mobius.core.ui.box.orientation_horizontal)
@@ -118,7 +121,7 @@ class ProcessingView(object):
         vbox.add_child(hbox, mobius.core.ui.box.fill_none)
 
         label = mobius.core.ui.label('Profile:')
-        label.set_visible(False)
+        label.set_visible(True)
         hbox.add_child(label, mobius.core.ui.box.fill_none)
 
         # Create a ListStore with one string column
@@ -126,13 +129,17 @@ class ProcessingView(object):
 
         # Create a ComboBox with the ListStore as its model
         self.__profile_combobox = Gtk.ComboBox.new_with_model(model)
+        model = self.__profile_combobox.get_model()
+
+        for profile in mobius.framework.list_case_profiles():
+            model.append((profile.get_id(), profile.get_name()))
 
         # Create a renderer to display the items
         renderer = Gtk.CellRendererText()
         self.__profile_combobox.pack_start(renderer, True)
         self.__profile_combobox.add_attribute(renderer, "text", 1)
         self.__profile_combobox.set_id_column(0)
-        self.__profile_combobox.set_visible(False)
+        self.__profile_combobox.set_visible(True)
         hbox.add_child(self.__profile_combobox, mobius.core.ui.box.fill_none)
 
         hbox.add_filler ()
@@ -151,7 +158,10 @@ class ProcessingView(object):
         # panel data
         self.__running_items = {}
         self.__itemlist = []
-        self.__item = None
+        self.__watched_item = None
+
+        # Set widget callbacks
+        self.__status_tableview.set_control(self, 'status_tableview')
 
     # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
     # @brief Get the UI widget of the processing view.
@@ -202,119 +212,119 @@ class ProcessingView(object):
 
     # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
     # @brief Populate panel with itemlist
-    #
-    # This method populates the item list by categorizing items into running,
-    # completed, and not processed states. It updates the status label based on
-    # the count of each category and manages the sensitivity of UI elements
-    # based on the datasource types associated with the items.
     # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
     def __populate_itemlist(self):
-        self.__populate_status_label()
-        self.__populate_messages()
-        self.__populate_profile_combobox()
+        self.__status_tableview.clear()
+        
+        for item in self.__itemlist:
+            status = self.__get_item_status(item)
+            self.__status_tableview.add_row((status, item.uid, item.name, item))            
+
+        self.__status_tableview.select_row(0)
         self.__widget.show_content()
 
     # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    # @brief Populate status label
-    # Update the status label based on the processing state of the selected items.
-    # It counts the number of items that are running, completed, and not processed,
-    # and updates the label accordingly. For a single item, it displays its status,
-    # while for multiple items, it shows the count of items in each state.
+    # @brief Update item status in the itemlist
+    # @param item Item to update
     # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    def __populate_status_label(self):
-        completed = 0
-        running = 0
-        not_processed = 0
+    def __update_item_status(self, item):
+        for row in self.__status_tableview:
+            if row[3] == item:
+                row[0] = self.__get_item_status(item)
 
-        # Iterate through a list of items that have a data source. It counts
-        # how many items are currently running, completed, and not processed.
-        # It also tracks the types of data sources and checks if all data sources
-        # are of the same type.
-        for item in [i for i in self.__itemlist if i.has_datasource()]:
-
-            if item in self.__running_items:
-                running += 1
-
-            else:
-                if item.has_ant('evidence'):
-                    completed += 1
-                else:
-                    not_processed += 1
-
-        # Update the status label based on the processing state of items in a list.
-        # If there is only one item, it sets the label to "Running", "Completed", or "Not processed"
-        # based on each counter. If there are multiple items, it displays the count of items
-        # in each state: Running, Completed, and Not processed.
-        if len(self.__itemlist) == 1:
-            if running:
-                self.__status_label.set_text("Running")
-            elif completed:
-                self.__status_label.set_text("Completed")
-            else:
-                self.__status_label.set_text("Not processed")
+        self.__on_status_tableview_updated()
+        
+    # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+    # @brief Get item status
+    # @param item Item to get status
+    # @return Item status
+    # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+    def __get_item_status(self, item):
+        if item in self.__running_items:
+            return 'Running'
+            
+        elif item.has_ant('evidence'):
+            return 'Completed'
+        
+        elif not item.has_datasource():
+            return 'No datasource'
+            
         else:
-            self.__status_label.set_text(f"{running} Running / {completed} Completed / {not_processed} Not processed")
+            return 'Not processed'
 
     # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    # @brief Populate running messages
+    # @brief Handle status tableview selection change event
     # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    def __populate_messages(self):
+    def status_tableview_on_selection_changed(self, selected_rows):
+        self.__on_status_tableview_updated()
+        
+    # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+    # @brief Update panel when status tableview selection changes
+    # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+    def __on_status_tableview_updated(self):
+        selected_rows = self.__status_tableview.get_selected_rows()
+        selected_items = [row[3] for (row_id, row) in selected_rows]
+        can_run_items = [item for item in selected_items if item.has_datasource() and item not in self.__running_items]
+        
+        # Select profile according to items that can run
+        profile_id = None
+        profile_ids = set(item.get_attribute('profile_id') for item in can_run_items if item.has_attribute('profile_id'))
+
+        if len(profile_ids) == 1:
+            profile_id = profile_ids.pop()
+
+        else:
+            profile_id = mobius.framework.get_config('evidence.last_profile')
+            
+        if profile_id:
+            self.__profile_combobox.set_active_id(profile_id)
+                    
+        # Set profile combobox and execute button sensitivity
+        can_run = len(can_run_items) > 0
+        self.__execute_button.set_sensitive(can_run)
+        self.__profile_combobox.set_sensitive(can_run)
+
+        # Refresh running view
+        if len(selected_items) == 1 and selected_items[0] in self.__running_items:
+            self.__running_view.set_sensitive(True)
+            
+            old_watched_item = self.__watched_item
+
+            if not self.__watched_item or self.__watched_item != selected_items[0]:
+                old_watched_item = self.__watched_item
+                self.__watched_item = selected_items[0]
+                
+                if not old_watched_item:
+                    GLib.timeout_add(REFRESH_INTERVAL_MS, self.__on_update_running_view)
+
+        else:
+            self.__running_view.set_sensitive(False)
+            self.__watched_item = None
+            
+    # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+    # @brief Update running view
+    # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+    def __on_update_running_view(self):
         self.__running_view.clear()
 
-        for item in self.__itemlist:
-            ant = pymobius.ant.evidence.Ant(item)
-            for timestamp, text in ant.get_messages():
-                self.__running_view.add_row ((str(timestamp), text))
+        # Get running ANT
+        if not self.__watched_item:
+            return False
 
-    # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    # @brief Populate profile combobox
-    #
-    # Populate profile combobox based on the data sources of selected items.
-    # It determines the type of data sources, filters available profiles that match the data source type,
-    # and sets the last selected profile as active if it exists.
-    # The combobox is also set to be sensitive based on whether any profiles are available.
-    # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    def __populate_profile_combobox(self):
-        model = self.__profile_combobox.get_model()
-        model.clear()
+        data = self.__running_items.get(self.__watched_item, None)
+        if not data:
+            return False
 
-        # Iterates through selected items, checking the data source type of each item.
-        # If a data source is found, it sets the datasource_type to the type of the first data source.
-        # If subsequent data sources have a different type, datasource_type is set to '*' indicating mixed types.
-        datasource_type = ''
-
-        for item in self.__itemlist:
-            datasource = item.get_datasource()
-
-            if datasource:
-                if not datasource_type:
-                    datasource_type = datasource.get_type()
-
-                else:
-                    if datasource_type != datasource.get_type():
-                        datasource_type = '*'
-
-        # Process the list of available profiles based on a specified datasource type.
-        # It filters profiles that match the prefix derived from the datasource type and
-        # populates the profile combobox with these profiles. The last selected profile is also set
-        # as active in the combobox, defaulting to the first profile if no active profile is found.
-        if datasource_type and datasource_type != '*':
-            prefix = datasource_type + '.'
-            last_profile = mobius.framework.get_config('evidence.last_profile') or ''
-
-            for profile_id, profile_name in PROFILES:
-                if profile_id.startswith(prefix):
-                    model.append((profile_id, profile_name))
-                    if profile_id == last_profile:
-                        self.__profile_combobox.set_active(len(model) - 1)
-
-            if self.__profile_combobox.get_active() == -1:
-                self.__profile_combobox.set_active(0)
-
-        # Set profile combobox and execute button sensitivity
-        can_run = len(model) > 0
-        self.__profile_combobox.set_sensitive(can_run)
-        self.__execute_button.set_sensitive(can_run)
+        t, ant = data
+        
+        # Update running view with ANT status metadata
+        metadata = ant.get_status()
+        
+        for key, value in metadata.get_values():
+            self.__running_view.add_row((key, str(value)))
+        
+        # Continue updating if still running
+        return True
 
     # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
     # @brief Handle the "Execute" button click event to process selected items.
@@ -338,7 +348,10 @@ class ProcessingView(object):
             # it prompts the user with a confirmation dialog asking if they are sure
             # they want to reload evidences. If the user selects 'no', the function
             # returns early without proceeding further.
-            if any (item.has_ant('evidence') for item in self.__itemlist):
+            selected_rows = self.__status_tableview.get_selected_rows()
+            selected_items = [row[3] for (row_id, row) in selected_rows]
+                              
+            if any (item.has_ant('evidence') for item in selected_items):
                 dialog = mobius.core.ui.message_dialog(mobius.core.ui.message_dialog.type_question)
                 dialog.text = "You are about to reload evidences. Are you sure?"
                 dialog.add_button(mobius.core.ui.message_dialog.button_yes)
@@ -363,17 +376,15 @@ class ProcessingView(object):
             # using the __thread_begin method. Each thread is set as a daemon,
             # meaning it will not prevent the program from exiting. The running threads are
             # stored in the running_items dictionary with the corresponding item as the key.
-            for item in self.__itemlist:
+            for item in selected_items:
                 if item.has_datasource() and item not in self.__running_items:
                     ant = pymobius.ant.evidence.Ant(item)
                     ant.clear_messages()
 
                     t = threading.Thread(target=self.__thread_begin, args=(item, profile_id), daemon=True)
                     t.start()
-                    self.__running_items[item] = t
-
-            # Refresh panel data
-            self.set_data(self.__itemlist)
+                    self.__running_items[item] = (t, ant)
+                    self.__update_item_status(item)
 
         except Exception as e:
             mobius.core.logf(f"WRN {str(e)}\n{traceback.format_exc()}")
@@ -415,5 +426,5 @@ class ProcessingView(object):
     # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
     def __thread_end(self, item):
         self.__running_items.pop(item, None)
-        self.set_data(self.__itemlist)
+        self.__update_item_status(item)
         self.__control.on_processing_end()
