@@ -1,6 +1,9 @@
 Mobius Forensic Toolkit 2.19
 	* docs: Create directory for consolidated documentation
 	* Created new resource folder data/profiles
+	* evidence-viewer: Added new items' status tableview
+	* evidence-viewer: Added new profile combobox
+	* evidence-viewer: Added new processing status tableview
 	* libmobius_core: Added new method decoder::ini::get_value (with default value)
 	* libmobius_framework: Added new class case_profile
 	* libmobius_framework: Added new function list_case_profiles
